--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="mulai_sekarang">Mulai Sekarang!</string>
     <string name="masukan_kota_anda">Masukan Kota Anda..</string>
     <string name="pencarian_terakhir">Pencarian Terakhir</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
