Update Clean Code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,33 @@
     <string name="konfirmasi_password">Konfirmasi Password</string>
     <string name="masukkan_email_baru_anda">Masukkan Email Baru Anda</string>
     <string name="masukkan_password_baru_anda">Masukkan Password Baru Anda</string>
+    <string name="new_password_confirm">New Password Confirm</string>
+    <string name="update_password">Update Password</string>
+    <string name="new_password">New Password</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="update_email">Update Email</string>
+    <string name="reset_password">Reset Password</string>
+    <string name="pilihan_trip_buat_kamu">Pilihan Trip buat Kamu</string>
+    <string name="cek_trip_seru_buat_kamu">Cek trip seru buat kamu!</string>
+    <string name="daftar_akun">Daftar Akun</string>
+    <string name="daftar">Daftar</string>
+    <string name="atau">atau</string>
+    <string name="lanjutkan_dengan_google">Lanjutkan dengan Google</string>
+    <string name="sudah_punya_akun">Sudah punya akun ?</string>
+    <string name="masuk">Masuk</string>
+    <string name="daftar_trip_plan_kamu">Daftar Trip Plan Kamu</string>
+    <string name="pastikan_trip_plan_kamu_sudah_sesuai">Pastikan trip plan kamu sudah sesuai</string>
+    <string name="masuk_akun">Masuk Akun</string>
+    <string name="lupa_password">Lupa password?</string>
+    <string name="tidak_punya_akun">Tidak punya akun ?</string>
+    <string name="rekomendasi_trip_plan">Rekomendasi Trip Plan</string>
+    <string name="rekomendasi_trip_plan_buat_kamu">Rekomendasi trip plan buat kamu!</string>
+    <string name="jakarta">Jakarta</string>
+    <string name="plan_a">Plan A</string>
+    <string name="rekomendasi_10_tempat_wisata_di_jakarta">Rekomendasi 10 Tempat Wisata di Jakarta</string>
+    <string name="hello">Hello</string>
+    <string name="lokasi_kamu">Lokasi kamu</string>
+    <string name="none">None</string>
+    <string name="lihat_semua">Lihat Semua</string>
 </resources>
