--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,14 @@
     <string name="lokasi_kamu">Lokasi kamu</string>
     <string name="none">None</string>
     <string name="lihat_semua">Lihat Semua</string>
+    <string name="detail_trip">Detail Trip</string>
+    <string name="name">Name</string>
+    <string name="rating">Rating</string>
+    <string name="description">Description</string>
+    <string name="username">Username</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ubah_password">Ubah password</string>
+    <string name="save">Save</string>
+    <string name="logout">Logout</string>
 </resources>
